--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NeonGhostDev</title>
   </head>
-  <body></body>
+  <body>
+    <nav></nav>
+    <main>
+      <h1></h1>
+    </main>
+    <footer></footer>
+  </body>
 </html>
