📱 Mobile view: Fonts and neon added to the elements of the nav, font files added to the project

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         />
         <ul class="mobile-menu__list">
           <li class="mobile-menu__item">
-            <a href="" class="mobile-menu__link">About</a>
+            <a href="" class="mobile-menu__link">About Me</a>
           </li>
           <li class="mobile-menu__item">
             <a href="" class="mobile-menu__link">Portfolio</a>
