📱 Mobile view: Hero section basic styles added

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         src="./assets/icons/menu_gradient_blue_ligth.png"
         alt="menu"
       />
-      <nav class="mobile-menu" id="mobileMenu">
+      <nav class="mobile-menu mobile-menu--hidden" id="mobileMenu">
         <img
           id="closeMenuIcon"
           src="./assets/icons/menu_close_gradient_blue_ligth.png"
@@ -52,8 +52,17 @@
         <a href="#" class="mobile-menu__button">Contact</a>
       </nav>
     </header>
-    <main>
-      <h1>JeanPaul Erazo</h1>
+    <main class="main">
+      <section class="hero">
+        <div class="hero__title-container">
+          <h1 class="hero__main-title hero__main-title--gradient">
+            JeanPauL
+
+            <span class="hero__main-title--secondary">Erazo</span>
+          </h1>
+          <span class="hero__triangle"></span>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
