📱 Mobile view: Hero section basic content structure finished

--- a/src/index.html
+++ b/src/index.html
@@ -43,10 +43,10 @@
             <a href="" class="mobile-menu__link">About Me</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="" class="mobile-menu__link">Portfolio</a>
+            <a href="" class="mobile-menu__link">Experience</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="" class="mobile-menu__link">YouTube</a>
+            <a href="" class="mobile-menu__link">Socials</a>
           </li>
         </ul>
         <a href="#" class="mobile-menu__button">Contact</a>
@@ -54,15 +54,229 @@
     </header>
     <main class="main">
       <section class="hero">
-        <div class="hero__title-container">
-          <h1 class="hero__main-title hero__main-title--gradient">
-            JeanPauL
+        <article class="hero__article">
+          <div class="hero__title-container">
+            <h1 class="hero__main-title">
+              <span class="hero__main-greeting">Hi, I'm...</span>
+              Jean
+              <br />
+              Paul
+              <span class="hero__main-title--secondary">Erazo</span>
+            </h1>
+          </div>
 
-            <span class="hero__main-title--secondary">Erazo</span>
-          </h1>
-          <span class="hero__triangle"></span>
-        </div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            version="1.1"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            xmlns:svgjs="http://svgjs.dev/svgjs"
+            viewBox="0 0 800 800"
+          >
+            <defs>
+              <linearGradient
+                x1="50%"
+                y1="0%"
+                x2="50%"
+                y2="100%"
+                id="nnneon-grad"
+              >
+                <stop stop-color="#5beaf7" stop-opacity="1" offset="0%"></stop>
+                <stop
+                  stop-color="#ff00d9"
+                  stop-opacity="1"
+                  offset="100%"
+                ></stop>
+              </linearGradient>
+              <filter
+                id="nnneon-filter"
+                x="-100%"
+                y="-100%"
+                width="400%"
+                height="400%"
+                filterUnits="objectBoundingBox"
+                primitiveUnits="userSpaceOnUse"
+                color-interpolation-filters="sRGB"
+              >
+                <feGaussianBlur
+                  stdDeviation="51 24"
+                  x="0%"
+                  y="0%"
+                  width="100%"
+                  height="100%"
+                  in="SourceGraphic"
+                  edgeMode="none"
+                  result="blur"
+                ></feGaussianBlur>
+              </filter>
+              <filter
+                id="nnneon-filter2"
+                x="-100%"
+                y="-100%"
+                width="400%"
+                height="400%"
+                filterUnits="objectBoundingBox"
+                primitiveUnits="userSpaceOnUse"
+                color-interpolation-filters="sRGB"
+              >
+                <feGaussianBlur
+                  stdDeviation="28 17"
+                  x="0%"
+                  y="0%"
+                  width="100%"
+                  height="100%"
+                  in="SourceGraphic"
+                  edgeMode="none"
+                  result="blur"
+                ></feGaussianBlur>
+              </filter>
+            </defs>
+            <g
+              stroke-width="35"
+              stroke="url(#nnneon-grad)"
+              fill="none"
+              transform="rotate(180, 400, 400)"
+            >
+              <polygon
+                points="400,69.5 69.5,730.5 730.5,730.5"
+                filter="url(#nnneon-filter)"
+              ></polygon>
+              <polygon
+                points="412,69.5 81.5,730.5 742.5,730.5"
+                filter="url(#nnneon-filter2)"
+                opacity="0.25"
+              ></polygon>
+              <polygon
+                points="388,69.5 57.5,730.5 718.5,730.5"
+                filter="url(#nnneon-filter2)"
+                opacity="0.25"
+              ></polygon>
+              <polygon points="400,69.5 69.5,730.5 730.5,730.5"></polygon>
+            </g>
+          </svg>
+        </article>
+
+        <article class="hero__article hero_article--secondary">
+          <div class="hero__title-container">
+            <h1 class="hero__main-title">
+              <span class="hero__main-greeting">Also known as...</span>
+              Neon
+              <br />
+              Ghost
+              <span class="hero__main-title--secondary">Dev</span>
+            </h1>
+          </div>
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            version="1.1"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            xmlns:svgjs="http://svgjs.dev/svgjs"
+            viewBox="0 0 800 800"
+          >
+            <defs>
+              <linearGradient
+                x1="50%"
+                y1="0%"
+                x2="50%"
+                y2="100%"
+                id="nnneon-grad2"
+              >
+                <stop stop-color="#5beaf7" stop-opacity="1" offset="0%"></stop>
+                <stop
+                  stop-color="#ff00d9"
+                  stop-opacity="1"
+                  offset="100%"
+                ></stop>
+              </linearGradient>
+              <filter
+                id="nnneon-filter2_1"
+                x="-100%"
+                y="-100%"
+                width="400%"
+                height="400%"
+                filterUnits="objectBoundingBox"
+                primitiveUnits="userSpaceOnUse"
+                color-interpolation-filters="sRGB"
+              >
+                <feGaussianBlur
+                  stdDeviation="51 24"
+                  x="0%"
+                  y="0%"
+                  width="100%"
+                  height="100%"
+                  in="SourceGraphic"
+                  edgeMode="none"
+                  result="blur"
+                ></feGaussianBlur>
+              </filter>
+              <filter
+                id="nnneon-filter2"
+                x="-100%"
+                y="-100%"
+                width="400%"
+                height="400%"
+                filterUnits="objectBoundingBox"
+                primitiveUnits="userSpaceOnUse"
+                color-interpolation-filters="sRGB"
+              >
+                <feGaussianBlur
+                  stdDeviation="28 17"
+                  x="0%"
+                  y="0%"
+                  width="100%"
+                  height="100%"
+                  in="SourceGraphic"
+                  edgeMode="none"
+                  result="blur"
+                ></feGaussianBlur>
+              </filter>
+            </defs>
+            <g
+              stroke-width="35"
+              stroke="url(#nnneon-grad2)"
+              fill="none"
+              transform="rotate(180, 400, 400)"
+            >
+              <polygon
+                points="400,69.5 69.5,730.5 730.5,730.5"
+                filter="url(#nnneon-filter2_1)"
+              ></polygon>
+              <polygon
+                points="412,69.5 81.5,730.5 742.5,730.5"
+                filter="url(#nnneon-filter2_2)"
+                opacity="0.25"
+              ></polygon>
+              <polygon
+                points="388,69.5 57.5,730.5 718.5,730.5"
+                filter="url(#nnneon-filter2_2)"
+                opacity="0.25"
+              ></polygon>
+              <polygon points="400,69.5 69.5,730.5 730.5,730.5"></polygon>
+            </g>
+          </svg>
+        </article>
+        <article class="hero__scroll-container">
+          <a href="#about" class="hero__scroll-button">
+            <span>SCROLL DOWN</span>
+          </a>
+          <img
+            class="hero__scroll-arrow-down"
+            src="./assets/icons/down_arrow_blue_gradient.png"
+            alt=""
+          />
+          <img
+            class="hero__scroll-arrow-down"
+            src="./assets/icons/down_arrow_blue_gradient.png"
+            alt=""
+          />
+          <img
+            class="hero__scroll-arrow-down"
+            src="./assets/icons/down_arrow_blue_gradient.png"
+            alt=""
+          />
+        </article>
       </section>
+      <section id="about" class="about"></section>
     </main>
     <footer></footer>
   </body>
