📱 Mobile view: 'About me' section basic content and layout setup

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="assets/images/ghost_icon_5.png"
+      type="image/x-icon"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
@@ -16,7 +27,7 @@
       media="screen and (min-width: 1024px)"
     />
     <script src="./js/style.js" defer></script>
-    <title>NeonGhostDev</title>
+    <title>Neon Ghost Dev</title>
   </head>
   <body>
     <header class="header">
@@ -52,6 +63,7 @@
         <a href="#" class="mobile-menu__button">Contact</a>
       </nav>
     </header>
+
     <main class="main">
       <section class="hero">
         <article class="hero__article">
@@ -276,7 +288,55 @@
           />
         </article>
       </section>
-      <section id="about" class="about"></section>
+      <section id="about" class="about">
+        <article class="about__container">
+          <h1 class="heading heading_l heading_streamster about__heading">
+            About me
+          </h1>
+          <p class="paragraph">
+            Hi there! I'm <strong>JeanPaul Erazo</strong>, I'm a self-taught
+            <strong>Front-End Developer</strong> based in
+            <strong>Colombia</strong> 🇨🇴. <br /><br />
+            I want to contribute to solving our world's problems through
+            technology and innovation. I enjoy having challenges that help me to
+            go further at a personal and professional level. I'm continuously
+            learning about the software industry to bring fresh ideas to people
+            that need to solve their problems through technology.
+            <br /><br />
+            I am also exploring the world of content creation to share
+            knowledge, mostly with Latin American people, to let them know that
+            they can find their way in the technology industry and thus improve
+            their lives, and the lives of their families as well.
+          </p>
+          <div class="about__technologies-used">
+            <p class="paragraph">
+              I'm currently learning and working with these technologies:
+            </p>
+            <div class="about__technologies-logos">
+              <img
+                class="technology-logo"
+                src="assets/images/html_logo.png"
+                alt="HTML Logo"
+              />
+              <img
+                class="technology-logo"
+                src="assets/images/css_logo.png"
+                alt="CSS Logo"
+              />
+              <img
+                class="technology-logo"
+                src="assets/images/js_logo.png"
+                alt="JavaScript Logo"
+              />
+              <img
+                class="technology-logo"
+                src="assets/images/react_logo.png"
+                alt="JavaScript Logo"
+              />
+            </div>
+          </div>
+        </article>
+      </section>
     </main>
     <footer></footer>
   </body>
