📱 Mobile view: 'Experience' section, 'Work Experience' article basic content and layout added

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="assets/images/ghost_icon_5.png"
+      href="assets/images/ghost_icon.png"
       type="image/x-icon"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -65,7 +65,7 @@
     </header>
 
     <main class="main">
-      <section class="hero">
+      <section class="hero section">
         <article class="hero__article">
           <div class="hero__title-container">
             <h1 class="hero__main-title">
@@ -288,9 +288,9 @@
           />
         </article>
       </section>
-      <section id="about" class="about">
+      <section id="about" class="about section">
         <article class="about__container">
-          <h1 class="heading heading_l heading_streamster about__heading">
+          <h1 class="about__heading heading heading_xl heading_streamster">
             About me
           </h1>
           <p class="paragraph">
@@ -335,6 +335,67 @@
               />
             </div>
           </div>
+        </article>
+      </section>
+      <section class="experience section">
+        <article class="experience__title-container article">
+          <h1 class="heading heading_xl heading_streamster">Experience</h1>
+        </article>
+        <article class="experience__companies article">
+          <h1 class="heading heading_xs heading_alien_encounters">
+            Work Experience
+          </h1>
+          <p class="experience__companies-description paragraph">
+            I have worked for some companies and also worked on some freelance
+            projects, here are some of the most recent ones:
+          </p>
+          <div class="experience__entry">
+            <h2 class="experience__entry-title heading_s heading_quicksand">
+              Customer Support & Web Master
+              <a
+                href="https://www.codescrum.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="experience__company-name"
+                >@Codescrum
+              </a>
+            </h2>
+            <p class="experience__entry-date paragraph">
+              May 2021 - August 2022
+            </p>
+            <p class="experience__entry-description paragraph">
+              I was part of the Marketing and Innovation team contributing as
+              Web Master and Tech support for all the company products.
+            </p>
+
+            <ul class="experience__entry-tasks">
+              <li class="experience__entry-task">
+                <p class="paragraph">
+                  Worked with a Designer and Marketeers to design, create, and
+                  maintain the websites for all the products that the company
+                  had at that moment.
+                </p>
+              </li>
+              <li class="experience__entry-task">
+                <p class="paragraph">
+                  Implemented and worked as Tech Support for some of the
+                  products of the company using the
+                  <a
+                    href="http://tawk.to"
+                    target="_blank"
+                    class="experience__entry-link"
+                    >Tawk.to</a
+                  >
+                  platform.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </article>
+        <article class="experience__learning-projects article">
+          <h1 class="heading heading_xs heading_alien_encounters">
+            Learning Projects
+          </h1>
         </article>
       </section>
     </main>
