📱 Mobile view: 'Experience' section background added

--- a/src/index.html
+++ b/src/index.html
@@ -378,7 +378,7 @@
               </li>
               <li class="experience__entry-task">
                 <p class="paragraph">
-                  Implemented and worked as Tech Support for some of the
+                  Implemented and worked as Customer Support for some of the
                   products of the company using the
                   <a
                     href="http://tawk.to"
@@ -396,6 +396,10 @@
           <h1 class="heading heading_xs heading_alien_encounters">
             Learning Projects
           </h1>
+          <p class="experience__learning-projects-description paragraph">
+            This is a work in progress… I'm still learning and working to be a
+            better Front-end developer, so I will update this section very soon…
+          </p>
         </article>
       </section>
     </main>
