📱 Mobile view: 'Experience' section, Work status and 'Featured Projects' article added

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             <a href="" class="mobile-menu__link">Experience</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="" class="mobile-menu__link">Socials</a>
+            <a href="" class="mobile-menu__link">YouTube</a>
           </li>
         </ul>
         <a href="#" class="mobile-menu__button">Contact</a>
@@ -288,6 +288,7 @@
           />
         </article>
       </section>
+
       <section id="about" class="about section">
         <article class="about__container">
           <h1 class="about__heading heading heading_xl heading_streamster">
@@ -337,14 +338,22 @@
           </div>
         </article>
       </section>
+
       <section class="experience section">
         <article class="experience__title-container article">
           <h1 class="heading heading_xl heading_streamster">Experience</h1>
         </article>
+
         <article class="experience__companies article">
           <h1 class="heading heading_xs heading_alien_encounters">
             Work Experience
           </h1>
+          <span class="experience__work-status badge-message"
+            >I'm currently searching for a new job opportunity as a
+            <strong>Jr. Front-end Developer</strong>, if you think I could fit
+            into your team please don't hesitate to
+            <a class="link" href="#contact"> Contact Me 🧑🏻‍💻 </a>
+          </span>
           <p class="experience__companies-description paragraph">
             I have worked for some companies and also worked on some freelance
             projects, here are some of the most recent ones:
@@ -356,7 +365,7 @@
                 href="https://www.codescrum.com/"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="experience__company-name"
+                class="link"
                 >@Codescrum
               </a>
             </h2>
@@ -365,7 +374,7 @@
             </p>
             <p class="experience__entry-description paragraph">
               I was part of the Marketing and Innovation team contributing as
-              Web Master and Tech support for all the company products.
+              Webmaster and Customer support for some of the company's products:
             </p>
 
             <ul class="experience__entry-tasks">
@@ -379,11 +388,8 @@
               <li class="experience__entry-task">
                 <p class="paragraph">
                   Implemented and worked as Customer Support for some of the
-                  products of the company using the
-                  <a
-                    href="http://tawk.to"
-                    target="_blank"
-                    class="experience__entry-link"
+                  company's products using the
+                  <a href="http://tawk.to" target="_blank" class="link"
                     >Tawk.to</a
                   >
                   platform.
@@ -392,6 +398,17 @@
             </ul>
           </div>
         </article>
+
+        <article class="experience__featured-projects article">
+          <h1 class="heading heading_xs heading_alien_encounters">
+            Featured Projects
+          </h1>
+          <p class="experience__learning-projects-description paragraph">
+            This is a work in progress… I'm still learning and working to be a
+            better Front-end developer, so I will update this section very soon…
+          </p>
+        </article>
+
         <article class="experience__learning-projects article">
           <h1 class="heading heading_xs heading_alien_encounters">
             Learning Projects
@@ -402,6 +419,8 @@
           </p>
         </article>
       </section>
+
+      <section class="socials section"></section>
     </main>
     <footer></footer>
   </body>
