📱 Mobile view: 'Hero' section, layout improvements for responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
           </div>
 
           <svg
+            class="hero__article-triangle-background"
             xmlns="http://www.w3.org/2000/svg"
             version="1.1"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -179,6 +180,7 @@
           </div>
 
           <svg
+            class="hero__article-triangle-background"
             xmlns="http://www.w3.org/2000/svg"
             version="1.1"
             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -267,7 +269,8 @@
             </g>
           </svg>
         </article>
-        <article class="hero__scroll-container">
+
+        <article class="hero__scroll-button-container">
           <a href="#about" class="hero__scroll-button">
             <span>SCROLL DOWN</span>
           </a>
@@ -296,14 +299,19 @@
           </h1>
           <p class="paragraph">
             Hi there! I'm <strong>JeanPaul Erazo</strong>, I'm a self-taught
-            <strong>Front-End Developer</strong> based in
-            <strong>Colombia</strong> 🇨🇴. <br /><br />
+            <strong>Front-End Developer</strong> and
+            <strong>Content Creator</strong> known as
+            <strong>Neon Ghost Dev</strong>, based in
+            <strong>Colombia</strong> 🇨🇴.
+          </p>
+          <p class="paragraph">
             I want to contribute to solving our world's problems through
             technology and innovation. I enjoy having challenges that help me to
             go further at a personal and professional level. I'm continuously
             learning about the software industry to bring fresh ideas to people
             that need to solve their problems through technology.
-            <br /><br />
+          </p>
+          <p class="paragraph">
             I am also exploring the world of content creation to share
             knowledge, mostly with Latin American people, to let them know that
             they can find their way in the technology industry and thus improve
@@ -420,7 +428,18 @@
         </article>
       </section>
 
-      <section class="socials section"></section>
+      <section class="youtube section">
+        <article class="article">
+          <h1 class="heading heading_xl heading_streamster">YouTube</h1>
+        </article>
+        <article class="youtube__description article">
+          <p class="paragraph">
+            I'm exploring the world of content creation to share knowledge. I'm
+            always learning about software development and so much more, so I
+            think the best way to really learn something is by teaching it.
+          </p>
+        </article>
+      </section>
     </main>
     <footer></footer>
   </body>
