📱 Mobile view: 'Youtube' section basic content and layout, video carrousel added, 'Contact' content and basic layout added

--- a/src/index.html
+++ b/src/index.html
@@ -429,7 +429,7 @@
       </section>
 
       <section class="youtube section">
-        <article class="article">
+        <article class="youtube__title-container article">
           <h1 class="heading heading_xl heading_streamster">YouTube</h1>
         </article>
         <article class="youtube__description article">
@@ -437,6 +437,121 @@
             I'm exploring the world of content creation to share knowledge. I'm
             always learning about software development and so much more, so I
             think the best way to really learn something is by teaching it.
+          </p>
+          <p class="paragraph">
+            My goal with this project is to help people to find their way into
+            the Tech Industry and improve their lives, since I'm Latin American,
+            my content is mainly directed to the Latin American audience.
+          </p>
+          <p class="paragraph">
+            So here are some of my most recent videos (Spanish):
+          </p>
+        </article>
+        <article class="youtube__videos-carrousel-container">
+          <a
+            href="http://google.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="youtube__video-card"
+          >
+            <img
+              class="youtube__video-thumbnail"
+              src="assets/images/01.png"
+              alt=""
+            />
+            <div class="youtube__video-content">
+              <h3 class="youtube__video-title heading heading_quicksand">
+                <strong> ¿Puedo ser PROGRAMADOR? Aquí comienza todo... </strong>
+              </h3>
+              <div class="youtube__video-data">
+                <p class="paragraph youtube__video-date">2 Months ago</p>
+                <p class="paragraph youtube__video-views">
+                  <strong>12.567 Views</strong>
+                </p>
+              </div>
+            </div>
+          </a>
+          <a
+            href="http://google.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="youtube__video-card"
+          >
+            <img
+              class="youtube__video-thumbnail"
+              src="assets/images/02.png"
+              alt=""
+            />
+            <div class="youtube__video-content">
+              <h3 class="youtube__video-title heading heading_quicksand">
+                <strong>
+                  ¿Puedo ser PROGRAMADOR? Aquí comienza todo... Aquí comienza
+                  todo...
+                </strong>
+              </h3>
+              <div class="youtube__video-data">
+                <p class="paragraph youtube__video-date">5 Months ago</p>
+                <p class="paragraph youtube__video-views">
+                  <strong>12.567 Views</strong>
+                </p>
+              </div>
+            </div>
+          </a>
+          <a
+            href="http://google.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="youtube__video-card"
+          >
+            <img
+              class="youtube__video-thumbnail"
+              src="assets/images/03.jpg"
+              alt=""
+            />
+            <div class="youtube__video-content">
+              <h3 class="youtube__video-title heading heading_quicksand">
+                <strong>
+                  ¿Puedo ser PROGRAMADOR? Aquí comienza todo... Aquí comienza
+                  todo...Aquí comienza todo...Aquí comienza todo...
+                </strong>
+              </h3>
+              <div class="youtube__video-data">
+                <p class="paragraph youtube__video-date">1 Year ago</p>
+                <p class="paragraph youtube__video-views">
+                  <strong>12.567 Views</strong>
+                </p>
+              </div>
+            </div>
+          </a>
+        </article>
+      </section>
+
+      <section class="contact section">
+        <article class="contact__title-container article">
+          <h1 class="heading heading_xl heading_streamster">Contact me</h1>
+        </article>
+        <article class="contact__description article">
+          <p class="paragraph">
+            I'm currently looking for a new job opportunity as a
+            <strong>Jr. Front-end Developer</strong>, if you think I can fit
+            into your team, please fill out the form, and I will reply as soon
+            as possible.
+          </p>
+          <p class="paragraph">
+            f you just have a question or want to give me some feedback, or just
+            want to say hi, don't hesitate to fill out the form, I'll be glad to
+            reply to you.
+          </p>
+        </article>
+        <article class="contact__form-container article">
+          <form class="contact__form" action="">
+            <input type="text" />
+          </form>
+          <p class="contact__email paragraph">
+            If you don't want to use the form you can send me an email at
+            <a class="link" href="mailto:ghost@neonghost.dev"
+              >ghost@neonghost.dev</a
+            >
           </p>
         </article>
       </section>
