📱 Mobile view: 'Footer' layout and content improved, social links and GitHub stats layout added

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="assets/images/ghost_icon.png"
+      href="assets/icons/ghost_icon.png"
       type="image/x-icon"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -586,7 +586,7 @@
       </section>
     </main>
     <footer class="footer">
-      <h2 class="footer_heading heading heading_l heading_streamster">
+      <h2 class="footer_heading heading heading_xl heading_streamster">
         Follow me
       </h2>
       <div class="footer__socials">
@@ -594,7 +594,7 @@
           <img
             class="footer__social-logo"
             src="assets/icons/github_blue.png"
-            alt=""
+            alt="github logo"
           />
         </a>
         <a
@@ -604,7 +604,7 @@
           <img
             class="footer__social-logo"
             src="assets/icons/linkedin_blue.png"
-            alt=""
+            alt="linkedin logo"
           />
         </a>
         <a
@@ -614,7 +614,7 @@
           <img
             class="footer__social-logo"
             src="assets/icons/instagram_blue.png"
-            alt=""
+            alt="instagram logo"
           />
         </a>
         <a
@@ -624,15 +624,54 @@
           <img
             class="footer__social-logo logo_m"
             src="assets/icons/youtube_blue.png"
-            alt=""
+            alt="youtube logo"
           />
         </a>
         <a class="footer__social-link" href="mailto:ghost@neonghost.dev">
           <img
             class="footer__social-logo logo_m"
             src="assets/icons/email_blue.png"
-            alt=""
+            alt="email logo"
           />
+        </a>
+      </div>
+      <div class="footer__github-data">
+        <a
+          class="footer__github-link"
+          href="https://github.com/neonghostdev/portfolio-website"
+          target="_blank"
+        >
+          <p class="footer__github-paragraph">
+            Desing & Built using HTML, CSS & JS
+          </p>
+          <p class="footer__github-paragraph">
+            By
+            <a
+              class="link"
+              href="https://github.com/neonghostdev"
+              target="_blank"
+              >@NeonGhostDev</a
+            >
+          </p>
+          <span class="footer__github-stats-container">
+            <span id="githubStars" class="footer__github-stat"
+              ><img
+                class="footer__github-icon"
+                src="assets/icons/star_blue.png"
+                alt="star icon"
+              />
+              1.698
+            </span>
+
+            <span id="githubForks" class="footer__github-stat"
+              ><img
+                class="footer__github-icon"
+                src="assets/icons/fork_blue.png"
+                alt="fork icon"
+              />
+              245
+            </span>
+          </span>
         </a>
       </div>
     </footer>
